--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,12 @@ install:
         - yes | sdkmanager --licenses
         # Platform tools
         - sdkmanager "emulator" "tools" "platform-tools" > /dev/null
-#        - sdkmanager --list | head -15
 
         # install pre-compiled flutter
         - FLUTTER_CHANNEL=stable
         - FLUTTER_VERSION=1.2.1-${FLUTTER_CHANNEL}
         - sdkmanager "platforms;android-28" "build-tools;28.0.3" > /dev/null
+        - sdkmanager --list | head -15
         - sudo apt-get install -y --no-install-recommends lib32stdc++6 libstdc++6 > /dev/null
         - wget --quiet --output-document=flutter.tar.xz https://storage.googleapis.com/flutter_infra/releases/${FLUTTER_CHANNEL}/linux/flutter_linux_v${FLUTTER_VERSION}.tar.xz && tar xf flutter.tar.xz > /dev/null && rm flutter.tar.xz
         - export PATH="$PATH":"$HOME/.pub-cache/bin"
