--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ before_cache:
 #  - find $HOME/.gradle/caches -name "*.lock" -type f -delete
 cache:
   directories:
-    - $HOME/.gradle/caches/
+    - $HOME/.gradle/caches/build-cache-1
 #    - $HOME/.gradle/wrapper/
     - $HOME/.pub-cache
 #    - $PWD/flutter_app/android/.gradle
