--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,8 @@ before_cache:
 #  - find $HOME/.gradle/caches -name "*.lock" -type f -delete
 cache:
   directories:
-    - $HOME/.gradle/caches/build-cache-1
+#    - $HOME/.gradle/caches/build-cache-1
+    - $HOME/.gradle/caches
 #    - $HOME/.gradle/wrapper/
     - $HOME/.pub-cache
 #    - $PWD/flutter_app/android/.gradle
