--- a/.travis.yml
+++ b/.travis.yml
@@ -41,11 +41,11 @@ before_cache:
 #  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 #  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 #  - rm -rf ~/.gradle/caches/*.*.*
-#  - find $HOME/.gradle/caches -name "*.lock" -type f -delete
+  - find $HOME/.gradle/caches/modules-* -name "*.lock" -type f -delete
 cache:
   directories:
-#    - $HOME/.gradle/caches/build-cache-1
-    - $HOME/.gradle/caches
+    - $HOME/.gradle/caches/modules-*
+#    - $HOME/.gradle/caches
 #    - $HOME/.gradle/wrapper/
     - $HOME/.pub-cache
 #    - $PWD/flutter_app/android/.gradle
