--- a/.travis.yml
+++ b/.travis.yml
@@ -34,17 +34,17 @@ script:
   - ls -latr ~/.gradle/caches
   - du -hs ~/.gradle/caches/*.*.*
 #  - du -hs ~/.gradle/caches/build-cache-1
-  - du -hs ~/.gradle/caches/modules-*
+  - du -hs ~/.gradle/caches/modules-2
   - du -hs ~/.gradle/caches/transforms-1
 before_cache:
   # clean cache
 #  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
 #  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
 #  - rm -rf ~/.gradle/caches/*.*.*
-  - find $HOME/.gradle/caches/modules-* -name "*.lock" -type f -delete
+  - find $HOME/.gradle/caches/modules-2 -name "*.lock" -type f -delete
 cache:
   directories:
-    - $HOME/.gradle/caches/modules-*
+    - $HOME/.gradle/caches/modules-2
 #    - $HOME/.gradle/caches
 #    - $HOME/.gradle/wrapper/
     - $HOME/.pub-cache
