--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,11 @@ script:
   - cd flutter_app
   - flutter build apk
   - ls -latr ~/.gradle/caches
-  - du -hs ~/.gradle/caches/*.*.*
-#  - du -hs ~/.gradle/caches/build-cache-1
+  - du -hs ~/.gradle/caches/journal-1
   - du -hs ~/.gradle/caches/modules-2
+  - du -hs ~/.gradle/caches/jars-3
   - du -hs ~/.gradle/caches/transforms-1
+  - du -hs ~/.gradle/caches/*.*.*
 before_cache:
   # clean cache
 #  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
